--- a/MSR/MSR-4.0-Avaloq.jrxml
+++ b/MSR/MSR-4.0-Avaloq.jrxml
@@ -14,7 +14,7 @@
 	<property name="com.jaspersoft.studio.property.dataset.dialog.DatasetDialog.sash.w2" value="354"/>
 	<property name="ireport.jasperserver.url" value="http://cloudit-eprocess:8083/jasperserver/"/>
 	<property name="ireport.jasperserver.user" value="palg"/>
-	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="Jasper MSR"/>
+	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="Jasper PRD"/>
 	<template><![CDATA["/Styles/Assl-Style-Template.jrtx"]]></template>
 	<style name="Table_TH" mode="Opaque" backcolor="#004893">
 		<box>
@@ -99,7 +99,7 @@
 				<reportElement x="0" y="32" width="730" height="1" uuid="d09819fc-4982-4636-b9e9-e96aaa844363"/>
 			</line>
 			<textField evaluationTime="Master">
-				<reportElement style="headerPageNumbers" x="567" y="0" width="163" height="32" uuid="8c8253e7-933e-4b18-984c-a0d2e58877bb"/>
+				<reportElement style="headerPageNumbers" x="560" y="0" width="170" height="32" uuid="8c8253e7-933e-4b18-984c-a0d2e58877bb"/>
 				<textElement textAlignment="Right"/>
 				<textFieldExpression><![CDATA["Reporting Period " + DATEFORMAT(DATE(INTEGER_VALUE(MID($P{selectedDate},1,4)),INTEGER_VALUE(MID($P{selectedDate},5,2)),INTEGER_VALUE(MID($P{selectedDate},7,2))),"MMM yyyy")+ " | Page " + $V{MASTER_CURRENT_PAGE} + " of " + $V{MASTER_TOTAL_PAGES}]]></textFieldExpression>
 			</textField>
@@ -123,12 +123,6 @@
 				</textElement>
 				<text><![CDATA[Avaloq core banking solution is based on an Avaloq customization named Avaloq Source Master (ASM) that enables multiple Business Units (BU) on a single Avaloq instance.]]></text>
 			</staticText>
-		</band>
-		<band height="164">
-			<image hAlign="Center" vAlign="Middle">
-				<reportElement x="269" y="0" width="190" height="164" uuid="f7946bd9-5931-4109-a8f6-c6495d5d094d"/>
-				<imageExpression><![CDATA[$P{is_mesi}?"/images/AvaloqSourceMaster.png":"/images/Avaloq_Source_Master_1.png"]]></imageExpression>
-			</image>
 		</band>
 		<band height="123">
 			<staticText>
