--- a/MSR/MSR-Introduction.jrxml
+++ b/MSR/MSR-Introduction.jrxml
@@ -2,7 +2,7 @@
 <!-- Created with Jaspersoft Studio version 7.3.1.final using JasperReports Library version 6.8.1-3d4b87119c827be13776e451fb3738062f84a87d  -->
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="Introduction" pageWidth="595" pageHeight="842" columnWidth="483" leftMargin="56" rightMargin="56" topMargin="56" bottomMargin="56" isSummaryWithPageHeaderAndFooter="true" isFloatColumnFooter="true" uuid="b68e4251-4e98-4ffa-99cc-646e75dcfaf5">
 	<property name="com.jaspersoft.studio.data.sql.tables" value=""/>
-	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="Jasper MSR"/>
+	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="Jasper PRD"/>
 	<template><![CDATA["/Styles/Assl-Style-Template.jrtx"]]></template>
 	<parameter name="coverTitle" class="java.lang.String">
 		<defaultValueExpression><![CDATA["NEWSLETTER TITLE"]]></defaultValueExpression>
@@ -53,7 +53,7 @@
 				<reportElement x="0" y="32" width="483" height="1" uuid="d09819fc-4982-4636-b9e9-e96aaa844363"/>
 			</line>
 			<textField evaluationTime="Master">
-				<reportElement style="headerPageNumbers" x="320" y="0" width="163" height="32" uuid="05b74d8b-c79f-4364-a0be-4de005bfc63e"/>
+				<reportElement style="headerPageNumbers" x="310" y="0" width="173" height="32" uuid="05b74d8b-c79f-4364-a0be-4de005bfc63e"/>
 				<textElement textAlignment="Right"/>
 				<textFieldExpression><![CDATA["Reporting Period " + DATEFORMAT(DATE(INTEGER_VALUE(MID($P{selectedDate},1,4)),INTEGER_VALUE(MID($P{selectedDate},5,2)),INTEGER_VALUE(MID($P{selectedDate},7,2))),"MMM yyyy")+ " | Page " + $V{MASTER_CURRENT_PAGE} + " of " + $V{MASTER_TOTAL_PAGES}]]></textFieldExpression>
 			</textField>
@@ -62,16 +62,19 @@
 	<detail>
 		<band height="249" splitType="Stretch">
 			<staticText>
-				<reportElement style="NormalText" positionType="Float" x="0" y="20" width="483" height="90" uuid="37b23a45-e9f2-4c67-8bca-bcdc2dca711b">
+				<reportElement style="NormalText" positionType="Float" x="0" y="20" width="483" height="160" uuid="37b23a45-e9f2-4c67-8bca-bcdc2dca711b">
 					<property name="com.jaspersoft.studio.unit.tabStopWidth" value="px"/>
 				</reportElement>
 				<textElement>
 					<paragraph tabStopWidth="0"/>
 				</textElement>
 				<text><![CDATA[The purpose of this monthly report is to give to the Client a global overview on the security related controls, issues and activities of the provided services.
-The scope is extended to all information security perimeter as agreed and defined in the Security Control Document (SCD), and the document template is set forth in the Security Report Content parameter described in section 6.X and 15.1 of the SCD 5,X. According to the amendment process, any change to the document template will follow the procedure defined in Schedule Q: Contract Amendment Process of the Agreement for Outsourcing Services.
+The scope is extended to all information security perimeter as agreed and defined in the Security Control Document (SCD), and the document template is set forth in the Security Report Content
+parameter described in section 6.X and 15.1 of the SCD 5.X.
 
-]]></text>
+Our goal is to give to the Client security benchmark on all the topics covered in this report always keeping an eye at the risk exposure.
+
+Our expectation is to receive constantly feedbacks in order to improve the general level of the services provided.]]></text>
 			</staticText>
 			<textField hyperlinkType="LocalAnchor" bookmarkLevel="1">
 				<reportElement style="Header-2" x="0" y="2" width="483" height="18" uuid="9ec11c44-0b91-45bc-8154-0049d3f065ce"/>
@@ -79,14 +82,6 @@ The scope is extended to all information security perimeter as agreed and define
 				<anchorNameExpression><![CDATA[$V{x.Introduction}]]></anchorNameExpression>
 				<hyperlinkAnchorExpression><![CDATA[$V{x.Introduction}]]></hyperlinkAnchorExpression>
 			</textField>
-			<staticText>
-				<reportElement style="NormalText" positionType="Float" x="0" y="109" width="483" height="30" uuid="83f61fa7-f83b-4105-a4e2-0573ef3c6a30"/>
-				<text><![CDATA[Our goal is to give to the Client security benchmark on all the topics covered in this report always keeping an eye at the risk exposure.]]></text>
-			</staticText>
-			<staticText>
-				<reportElement style="NormalText" positionType="Float" x="0" y="140" width="483" height="30" uuid="f7041a66-ec20-4518-ada1-212b35ab8f3b"/>
-				<text><![CDATA[Our expectation is to receive constantly feedbacks in order to improve the general level of the services provided.]]></text>
-			</staticText>
 		</band>
 	</detail>
 	<pageFooter>
